He quitado main y cambiado a abstract la clase y añadido métodos

--- a/WarmCoffe/src/GUI/LoginView.form
+++ b/WarmCoffe/src/GUI/LoginView.form
@@ -6,7 +6,7 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Warm Coffe"/>
+            <Property name="text" type="java.lang.String" value="Warm Coffee"/>
           </Properties>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
