--- a/WarmCoffe/src/GUI/CreateAccountView.form
+++ b/WarmCoffe/src/GUI/CreateAccountView.form
@@ -149,7 +149,11 @@
                   <Font name="Yu Gothic Light" size="14" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Atr&#xe1;s"/>
+                <Property name="borderPainted" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
               <Properties>
